
if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
    set(MODULE_COMPILE_FLAGS "${LEOSAC_COMPILE_FLAGS}") #-fvisibility=hidden")
endif()

set(LEOSAC_MODULE_INSTALL_DIR lib/leosac)

add_subdirectory(rpleth)
add_subdirectory(sysfsgpio)
add_subdirectory(stdin-controller)
add_subdirectory(bench-toggle)
add_subdirectory(monitor)
add_subdirectory(pifacedigital)
add_subdirectory(wiegand)
add_subdirectory(auth)
add_subdirectory(doorman)
add_subdirectory(led-buzzer)
add_subdirectory(test-and-reset)
add_subdirectory(instrumentation)
add_subdirectory(event-publish)
add_subdirectory(replication)
add_subdirectory(ws-notifier)
add_subdirectory(tcp-notifier)
add_subdirectory(websock-api)
add_subdirectory(smtp)
