set(INSTRUMENTATION_BIN intrumentation)

set(INSTRUMENTATION_SRCS
    init.cpp
    InstrumentationModule.cpp
)

add_library(${INSTRUMENTATION_BIN} SHARED ${INSTRUMENTATION_SRCS})

set_target_properties(${INSTRUMENTATION_BIN} PROPERTIES
    COMPILE_FLAGS "${MODULE_COMPILE_FLAGS}"
    )

install(TARGETS ${INSTRUMENTATION_BIN} DESTINATION ${LEOSAC_MODULE_INSTALL_DIR})
