set(PERSISTENTMONITOR_BIN persistent-monitor)

set(PERSISTENTMONITOR_SRCS
    persistent-monitor.cpp
)

add_library(${PERSISTENTMONITOR_BIN} SHARED ${PERSISTENTMONITOR_SRCS})

set_target_properties(${PERSISTENTMONITOR_BIN} PROPERTIES
    COMPILE_FLAGS "${MODULE_COMPILE_FLAGS}"
    )
#target_include_directories(${PERSISTENTMONITOR_BIN} PUBLIC ${CMAKE_SOURCE_DIR}/src "${CMAKE_SOURCE_DIR}/zmqpp/src")

install(TARGETS ${PERSISTENTMONITOR_BIN} DESTINATION ${LEOSAC_MODULE_INSTALL_DIR})
