set(STDINCONTROLLER_BIN stdin-controller)

set(STDINCONTROLLER_SRCS
    init.cpp
    StdinControllerModule.cpp
)

add_library(${STDINCONTROLLER_BIN} SHARED ${STDINCONTROLLER_SRCS})

set_target_properties(${STDINCONTROLLER_BIN} PROPERTIES
    COMPILE_FLAGS "${MODULE_COMPILE_FLAGS}"
    )
#target_include_directories(${STDINCONTROLLER_BIN} PUBLIC ${CMAKE_SOURCE_DIR}/src "${CMAKE_SOURCE_DIR}/zmqpp/src")

install(TARGETS ${STDINCONTROLLER_BIN} DESTINATION ${LEOSAC_MODULE_INSTALL_DIR})
